// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-menuitem clones attributes 1`] = `
<ld-menuitem data-attribute="example">
  <mock:shadow-root>
    <li class="ld-menuitem" role="menuitem">
      <ld-button class="ld-menuitem__button" data-attribute="example" justifycontent="start" mode="neutral-ghost" type="button">
        <slot></slot>
      </ld-button>
    </li>
  </mock:shadow-root>
  Menu item
</ld-menuitem>
`;

exports[`ld-menuitem maps mode prop 1`] = `
<body>
  <ld-menuitem mode="neutral">
    <mock:shadow-root>
      <li class="ld-menuitem" role="menuitem">
        <ld-button class="ld-menuitem__button" justifycontent="start" mode="neutral-ghost" type="button">
          <slot></slot>
        </ld-button>
      </li>
    </mock:shadow-root>
    Menu item 1
  </ld-menuitem>
  <ld-menuitem mode="highlight">
    <mock:shadow-root>
      <li class="ld-menuitem" role="menuitem">
        <ld-button class="ld-menuitem__button" justifycontent="start" mode="ghost" type="button">
          <slot></slot>
        </ld-button>
      </li>
    </mock:shadow-root>
    Menu item 2
  </ld-menuitem>
  <ld-menuitem mode="danger">
    <mock:shadow-root>
      <li class="ld-menuitem" role="menuitem">
        <ld-button class="ld-menuitem__button" justifycontent="start" mode="danger-ghost" type="button">
          <slot></slot>
        </ld-button>
      </li>
    </mock:shadow-root>
    Menu item 3
  </ld-menuitem>
</body>
`;

exports[`ld-menuitem renders default 1`] = `
<ld-menuitem>
  <mock:shadow-root>
    <li class="ld-menuitem" role="menuitem">
      <ld-button class="ld-menuitem__button" justifycontent="start" mode="neutral-ghost" type="button">
        <slot></slot>
      </ld-button>
    </li>
  </mock:shadow-root>
  Menu item
</ld-menuitem>
`;

exports[`ld-menuitem renders other known props 1`] = `
<ld-menuitem disabled="" href="#" ld-tabindex="1" size="sm" target="_blank">
  <mock:shadow-root>
    <li class="ld-menuitem" role="menuitem">
      <ld-button class="ld-menuitem__button" disabled="" href="#" justifycontent="start" ldtabindex="1" mode="neutral-ghost" size="sm" target="_blank" type="button">
        <slot></slot>
      </ld-button>
    </li>
  </mock:shadow-root>
  Menu item
</ld-menuitem>
`;

exports[`ld-menuitem updates cloned attributes 1`] = `
<ld-menuitem data-attribute="test">
  <mock:shadow-root>
    <li class="ld-menuitem" role="menuitem">
      <ld-button class="ld-menuitem__button" data-attribute="test" justifycontent="start" mode="neutral-ghost" type="button">
        <slot></slot>
      </ld-button>
    </li>
  </mock:shadow-root>
  Menu item
</ld-menuitem>
`;
